# binary_neurons_network

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  bnn_cpu_make_run.sh  bnn_gpu_cuda_make_run.sh  brain_friend.cpp  brain_friend.h  brain_tools.cpp  brain_tools.h  make_run.sh  run.sh
src/bnn/: bnn.h  bnn_implementation.h  bnn_settings.h  bnn_test.cpp  config.h  m_sequence.h  math.h  parameters.h  random.cpp  random.h  random_implementation.h  state.h  thread.h  thread_implementation.h  types.h  world.h
src/bnn/neurons/: binary.cpp  binary.h  binary_implementation.h  motor.cpp  motor.h  motor_implementation.h  neuron.cpp  neuron.h  neuron_implementation.h  sensor.c  sensor.cpp  sensor.h  sensor_implementation.h  storage.h  storage.hpp  storage_implementation.h
src/bnn_cpu/: CMakeLists.txt
src/bnn_cpu/headers/: brain.h  random.h  thread.h
src/bnn_cpu/headers/neurons/: binary.h  motor.h  neuron.h  sensor.h  storage.hpp
src/bnn_cpu/sources/: brain.cpp  random.cpp  thread.cpp
src/bnn_cpu/sources/neurons/: binary.cpp  motor.cpp  neuron.cpp  sensor.cpp
src/brain/: CMakeLists.txt  brain.cpp  brain.h  config.h  config.hpp  m_sequence.cpp  m_sequence.h  makefile  pch.h  random_put_get.cpp  random_put_get.h  simple_math.h  state.h  storage.cpp  storage.h  storage.hpp  thread.cpp  thread.h
src/brain/neurons/: binary.cpp  binary.h  motor.cpp  motor.h  neuron.cpp  neuron.h  sensor.cpp  sensor.h
src/brain/random/: config.h  config.hpp  random.cpp  random.h
src/common/: architecture.h  bnn_tools.cpp  bnn_tools.h  brain_tools.cpp  brain_tools.h  logger.cpp  logger.h  settings.h  settings_converter.hpp  state.h
src/common/headers/: brain_tools.h  config.hpp  simple_math.hpp  state.hpp
src/common/sources/: brain_tools.cpp  m_sequence.cpp
src/cpu/: CMakeLists.txt  bnn.cpp  brain.cpp  brain.h  config.hpp  cpu.cpp  cpu.h  random.h  thread.cpp  thread.h
src/cpu/neurons/: binary.cpp  binary.h  motor.cpp  neuron.cpp  neuron.h  sensor.cpp  sensor.h  storage.hpp
src/examples/: README.md
src/examples/m_sequence/: m_sequence.cpp  m_sequence.h  m_sequence.pro  main.cpp  makefile
src/examples/minimal/: CMakeLists.txt  main.cpp  makefile  minimal.pro
src/examples/minimal/cpu/: CMakeLists.txt
src/examples/minimal/cuda/: CMakeLists.txt
src/examples/web/: brain_friend.cpp  brain_friend.h  brain_friend_web.cpp  brain_friend_web.h  brain_tools_web.cpp  brain_tools_web.h  deviceai.cpp  deviceai.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  web.pro
src/gpu/: CMakeLists.txt
src/gpu/cuda/: CMakeLists.txt  Makefile  bnn.cpp  c.h  cuda.cu  cuda.h  cuda.hpp  main.cpp  memory.hpp  run.sh  settings.hpp  statistic.hpp  undef_implementations.h
src/gpu/cuda/app/: CMakeLists.txt  main.cpp
src/gpu/cuda/lib/: CMakeLists.txt  cuda.cu  cuda.h  undef_implementations.h
src/unit_tests/: CMakeLists.txt  bnn_memory_test.cpp  common.h
